add temporal loading sign

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="app.js"></script>
 </head>
 <body>
+<div id="loadingMessage">Loading videos, please wait...</div>
 
 <section id="videoSection">
     <div class="loader-box">
@@ -17,7 +18,7 @@
     </div>
 </section>
 
-<button id="randomButton">Показать случайное видео</button>
+<button id="randomButton" disabled>Show randim video</button>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
