--- a/start.html
+++ b/start.html
@@ -3,30 +3,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Start page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script defer src="app.js"></script>
 </head>
-<body class="bg-body-tertiary">
-
-<div >
-    <div class="">
-        <section id="videoSection">
-            <div class="loader-box">
-                <div class="loader">
-
-                </div>
-            </div>
-        </section>
-    </div>
-    <div>
-        <button id="randomButton" disabled>Show randim video</button>
+<body>
+<div class="min-vh-100 w-100 position-relative overflow-hidden text-center bg-body-tertiary d-flex align-items-center">
+    <div class="col-md-6 p-lg-5 mx-auto my-5 ">
+        <button id="startButton" class="btn btn-primary display-3 fw-bold btn-lg my-lg-3 px-5 rounded-pill focus-ring">Start testing</button>
     </div>
 </div>
-
-<div id="loadingMessage">Loading videos, please wait...</div>
-
-
+<div class="min-vh-100 w-100 position-relative overflow-hidden text-center bg-body-tertiary d-flex align-items-center">
+    <div class="col-md-6 p-lg-5 mx-auto my-5 ">
+    </div>
+</div>
+<script>
+    document.getElementById("startButton").addEventListener("click", function() {
+        window.location.href = "index.html";
+    });
+</script>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
